--- a/frontEnd/src/app/pages/about/about.component.html
+++ b/frontEnd/src/app/pages/about/about.component.html
@@ -1,1 +1,7 @@
-<p>about works!</p>
+<section>
+    <div>
+        <h1>Aive Solutions</h1>
+        <h2>Developing Dreams</h2>
+    </div>
+    <app-services-card/>
+</section>
