--- a/frontEnd/src/app/components/shared/navbar/navbar.component.html
+++ b/frontEnd/src/app/components/shared/navbar/navbar.component.html
@@ -1,13 +1,13 @@
-<section>
+<section id="header">
     <nav id="navbar">
         <div class="logo">
-            <img src="https://www.freeiconspng.com/thumbs/logo-design/blank-bird-logo-design-idea-png-15.png">
+            <img src="https://github.com/luiscarlos2004/AiveSolutions/blob/develop/frontEnd/public/images/aivelogo.png?raw=true">
         </div>
         <!-- <a routerLink="/home">Home</a> -->
          <div class="nav-links">
-            <a [routerLink]="['/']">about</a>
-            <a [routerLink]="['/hub']"></a>
+            <a [routerLink]="['/']">About</a>
+            <a [routerLink]="['/hub']">Hub</a>
          </div>
-        
     </nav>
+    <app-about/>
 </section>
