--- a/frontEnd/src/app/pages/services-card/services-card.component.html
+++ b/frontEnd/src/app/pages/services-card/services-card.component.html
@@ -1,7 +1,12 @@
-<section>
-    <div>
+<section id="cards-about">
+    <div class="card1">
         <h2>Software develop</h2>
         <p>Develop website to all client necesities</p>
+         <a>view more</a>
     </div>
-    
+    <div class="card2">
+        <h2>Software develop</h2>
+        <p>Develop website to all client necesities</p>
+        <a>view more</a>
+    </div>
 </section>
