--- a/frontEnd/src/app/components/shared/navbar/navbar.component.css
+++ b/frontEnd/src/app/components/shared/navbar/navbar.component.css
@@ -1,3 +1,20 @@
+#header{
+    background : linear-gradient(to right, rgb(0,0,0), rgb(23,186,170));
+    height: 600px;
+}
 #navbar{
-    background-color : red;
+    padding:30px;
+    display:flex;
+    
+    /* height:900px; */
+}
+#navbar .logo img{
+    height: auto;
+    width:6%;
+}
+#navbar .nav-links a{
+    color:white;
+    padding-right:10px;
+    text-decoration:none;
+    font-size: 23px;
 }
