--- a/frontEnd/src/app/pages/about/about.component.html
+++ b/frontEnd/src/app/pages/about/about.component.html
@@ -1,7 +1,6 @@
 <section>
-    <div>
-        <h1>Aive Solutions</h1>
-        <h2>Developing Dreams</h2>
+    <div id="about">
+        <h1 class="title">Aive Solutions</h1>
+        <h2 class="slogan">Developing Dreams</h2>
     </div>
-    <app-services-card/>
 </section>
